--- a/front.html
+++ b/front.html
@@ -2,14 +2,30 @@
 <html>
 <head>
   <meta charset= "utf-8">
+
+
   <link rel="stylesheet" href="front.css" />
 </head>
 <body>
+  <header>
+    Ici on va mettre les liens pour le menu, les autres pages etc
+  </header>
+
   <p>
-    hope it works<br/>
-    does it still?
-    poiuydzer
+    ici la phrase francaise à traduire<br/>
 
   </p>
+
+
+  <div id="answer">
+    <form action="" class="formulaire">
+      <input class="champ" type="text" value="traduction"/>
+                    <input class="bouton" type="button" value=" " />
+
+    </form>
+
+
+  </div>
+
 </body>
 </ html>
