rajout de code javascript pourindiquer combien on a de chances pour trouver le résultat

--- a/front.html
+++ b/front.html
@@ -19,10 +19,33 @@
 
   <div id="answer">
     <form action="" class="formulaire">
-      <input class="champ" type="text" value="traduction"/>
-                    <input class="bouton" type="button" value=" " />
+      <input id="champ" class="champ" type="text" value="traduction"/>
+                    <input id="bouton" class="bouton" type="button" value=" " />
 
     </form>
+    <div id="resultat"></div>
+    <script type="text/javascript">
+      let button = document.getElementById('bouton')
+      let champ = document.getElementById('champ')
+      let resultat = document.getElementById('resultat')
+      let nTentatives = 0
+      let vraieTraduction = 'salut' //emplacement de la bonn réponse
+      function click() {
+        nTentatives++
+        valeur = champ.value
+        if(valeur != vraieTraduction) {
+          if(nTentatives <= 3) {
+            resultat.innerHTML = '<p>dfjkdjfhg</p>'// conseil a donner quad il se trompe
+            alert('plus que ' + (3-nTentatives) + ' tentatives')
+          } else {
+            alert('déso c\'est fini')
+          }
+        } else {
+          alert('bravo')
+        }
+      }
+      button.addEventListener('click', click) //lie le bouton a la fonction click
+    </script>
 
 
   </div>
