--- a/Cours.html
+++ b/Cours.html
@@ -10,12 +10,12 @@
 </head>
 
 <div class="head">
-  <h1> Leçon 1 d'espagnol</h1>
+  <h1> Leçon  d'espagnol</h1>
 </div>
 
 <div class="cours">
   <i>
-    Probo una paga html
+    Probo una pagina html
   </i>
   <p>
     J'essaie une page html
