--- a/Cours.html
+++ b/Cours.html
@@ -9,15 +9,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
+<body>
 <div class="head">
-  <h1> Leçon  d'espagnol</h1>
+  <a href="front.html">
+      <img class="Menu" src="menu.png" alt="HTML tutorial" >
+  </a>
+  <div class="title">
+    <h1> <b>Leçon  d'espagnol </b></h1>
+  </div>
 </div>
 
 <div class="cours">
+  <h2>
+    Concordance des temps - Passé
+  </h2>
+  <p>
+  Règle Français : verbe proposition principale à l’imparfait de l’indicatif + que + verbe proposition subordonnée au présent du subjonctif.<br>
+  Règle espagnol : Verbe proposition principale à l’imparfait de l’indicatif + que + verbe proposition subordonnée à l’imparfait du subjonctif.
+  </p>
   <i>
-    Probo una pagina html
+    El quería que tu vinieras.
   </i>
   <p>
-    J'essaie une page html
+    Il voulait que tu viennes.
   </p>
 </div>
+
+<a href="front.html">
+  <div class="to_test">
+    <b>S'exercer</b>
+  </div>
+</a>
+
+</body>
